--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #000000;
+    color: #2E8B57;
     background-color: #FFFFFF;
 }
 
