--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #FFD700;
+    background-color: rgba(255, 223, 186, 0.4);
     padding: 25px;
     text-align: center;
     border-bottom: 5px solid #8B0000;
@@ -42,7 +42,7 @@ li {
 form {
     display: flex;
     flex-direction: column;
-    background-color: #FFD700;
+    background-color:  rgba(255, 223, 186, 0.4);
     padding: 25px;
     border: 5px solid #8B0000;
 }
@@ -80,7 +80,7 @@ button:hover {
 }
 
 footer {
-    background-color: #FFD700;
+    background-color:  rgba(255, 223, 186, 0.4);
     text-align: center;
     padding: 12px;
     width: 100%;
